# stdx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_install.bat  conanfile.py  package_build.bat
dummy/: CMakeLists.txt
flag/: CMakeLists.txt
include/stdx/: dummy.hpp  flag.hpp  mpmc_ring_buffer.hpp  stdx_export.hpp  utils.hpp
include/stdx/concurrency/: locked_queue.hpp  ring_buffer.hpp  thread_pool.hpp
include/stdx/logger/: log_manager.hpp  logger.hpp
include/stdx/logger/impl/: logger_impl.hpp
include/stdx/threading/: thread_pool.hpp
modules/flag/: CMakeLists.txt  README.md
modules/flag/include/stdx/: flag.hpp
modules/flag/tests/: test_flag.cxx
modules/locked_queue/: CMakeLists.txt
modules/logger/: CMakeLists.txt  README.md
modules/logger/include/stdx/: logger.hpp
modules/logger/include/stdx/logger/: log_manager.hpp  logger.hpp
modules/logger/include/stdx/logger/impl/: logger_impl.hpp
modules/logger/src/: log_manager.cxx  logger.cxx
modules/logger/src/impl/: logger_impl.cxx
modules/logger/tests/: test_logger.cxx
modules/ring_buffer/: CMakeLists.txt
modules/thread_pool/: CMakeLists.txt
src/: dummy.cxx  log_manager.cxx  logger.cxx
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  test_logger.cxx  test_package.cxx  test_ring_buffer.cxx  test_stdx.cxx  test_thread_pool.cxx
test_package/src/: test_logger.cxx
